objects/vlocity_cmt__OmniScript__c.object
<CustomObject>
    <description>Represents a Vlocity OmniScript. Each Vlocity OmniScript is a declarative script that defines a task-based, guided user process enabling users to get work done efficiently and effectively. OmniScripts can be configured to pull data from Salesforce or any other data source via business services and can execute any business service to launch and interact with server-side business process engines.</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomJavaScript__c</fullName>
        <label>Custom JavaScript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity OmniScripts</relationshipLabel>
        <relationshipName>VlocityOmniScripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DataRaptorBundleName__c</fullName>
        <formula>vlocity_cmt__DataRaptorBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsProcedure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsReusable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reusable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSON_Output__c</fullName>
        <label>JSON Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcedureKey__c</fullName>
        <externalId>true</externalId>
        <label>Procedure Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PropertySet__c</fullName>
        <label>Property Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Change Address</fullName>
                </value>
                <value>
                    <fullName>Customer Survey</fullName>
                </value>
                <value>
                    <fullName>Payment Details</fullName>
                </value>
                <value>
                    <fullName>Customer Details</fullName>
                </value>
                <value>
                    <fullName>Consumer Order Bundle</fullName>
                </value>
                <value>
                    <fullName>Consumer Order Mobile</fullName>
                </value>
                <value>
                    <fullName>Consumer Order TV</fullName>
                </value>
                <value>
                    <fullName>Consumer Order Internet</fullName>
                </value>
                <value>
                    <fullName>Consumer Order Landline</fullName>
                </value>
                <value>
                    <fullName>Business Order Bundle</fullName>
                </value>
                <value>
                    <fullName>Business Order Mobile</fullName>
                </value>
                <value>
                    <fullName>Business Order TV</fullName>
                </value>
                <value>
                    <fullName>Business Order Internet</fullName>
                </value>
                <value>
                    <fullName>Business Order Landline</fullName>
                </value>
                <value>
                    <fullName>Troubleshoot TV</fullName>
                </value>
                <value>
                    <fullName>Troubleshoot Mobile</fullName>
                </value>
                <value>
                    <fullName>Setup Bluetooth</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Find Customer</fullName>
                </value>
                <value>
                    <fullName>Resume Interaction</fullName>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>FDO</fullName>
                </value>
                <value>
                    <fullName>Receive Customer From Queue</fullName>
                </value>
                <value>
                    <fullName>Add Customer To Queue</fullName>
                </value>
                <value>
                    <fullName>Complete Order</fullName>
                </value>
                <value>
                    <fullName>Clock Out Page</fullName>
                </value>
                <value>
                    <fullName>Pay Bill Assisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TestHTMLTemplates__c</fullName>
        <label>Test custom HTML templates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VDO</fullName>
                </value>
                <value>
                    <fullName>MACD</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>VPL</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity OmniScript</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllCustom</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__SubType__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__Version__c</columns>
        <columns>vlocity_cmt__Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllCustom</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScript</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>